compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn go() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let x = {
    1
    2
  }
  x
}


----- COMPILED JAVASCRIPT
export function go() {
  let _block;
  {
    1;
    _block = 2;
  }
  let x = _block;
  return x;
}
