compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block_in_tail_position_is_not_an_iife.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn b() {\n  let x = 1\n  {\n    Nil\n    x + 1\n  }\n}\n"
---
----- SOURCE CODE

pub fn b() {
  let x = 1
  {
    Nil
    x + 1
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  let x = 1;
  {
    undefined;
    return x + 1;
  }
}
