compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__blocks_returning_use.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn b() {\n  {\n    use a <- fn(cb) { cb(1) }\n    a\n  }\n  {\n    use b <- fn(cb) { cb(2) }\n    b\n  }\n  3\n}\n    "
---
----- SOURCE CODE

pub fn b() {
  {
    use a <- fn(cb) { cb(1) }
    a
  }
  {
    use b <- fn(cb) { cb(2) }
    b
  }
  3
}
    

----- COMPILED JAVASCRIPT
export function b() {
  ((cb) => { return cb(1); })((a) => { return a; });
  ((cb) => { return cb(2); })((b) => { return b; });
  return 3;
}
