compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__pattern_assignment_last_in_block.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn main() {\n  let a = {\n    let b = #(1, 2)\n    let #(x, y) = b\n  }\n  a\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = {
    let b = #(1, 2)
    let #(x, y) = b
  }
  a
}


----- COMPILED JAVASCRIPT
export function main() {
  let _block;
  {
    let b = [1, 2];
    let x = b[0];
    let y = b[1];
    _block = b;
  }
  let a = _block;
  return a;
}
