compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__shadowed_variable_in_nested_scope.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn main() {\n  {\n    let x = 1\n    let _ = {\n      let x = 2\n      x\n    }\n    x\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  {
    let x = 1
    let _ = {
      let x = 2
      x
    }
    x
  }
}


----- COMPILED JAVASCRIPT
export function main() {
  {
    let x = 1;
    let $ = (() => {
      let x$1 = 2;
      return x$1;
    })();
    
    return x;
  }
}
